fix: plh-progress-path styling on smaller screens

--- a/src/theme/themes/plh_kids_kw/_overrides.scss
+++ b/src/theme/themes/plh_kids_kw/_overrides.scss
@@ -1161,19 +1161,19 @@ body[data-theme="plh_kids_kw"] {
             }
           }
           &:nth-child(1) {
-            bottom: 3%;
+            bottom: 1%;
             left: 40%;
           }
           &:nth-child(2) {
             bottom: 18%;
-            right: 3.6%;
+            right: 0;
           }
           &:nth-child(3) {
-            bottom: 30%;
+            bottom: 29%;
             right: 34%;
           }
           &:nth-child(4) {
-            bottom: 32%;
+            bottom: 30%;
             left: 7%;
           }
           &:nth-child(5) {
@@ -1181,12 +1181,12 @@ body[data-theme="plh_kids_kw"] {
             left: 2%;
           }
           &:nth-child(6) {
-            top: 34.6%;
+            top: 32%;
             left: 46%;
           }
           &:nth-child(7) {
-            top: 24%;
-            right: -1%;
+            top: 16%;
+            right: 0;
           }
           &:nth-child(8) {
             top: 13%;
@@ -1194,64 +1194,53 @@ body[data-theme="plh_kids_kw"] {
           }
           &:nth-child(9) {
             top: 2%;
-            left: 10%;
+            left: 13%;
           }
         }
       }
     }
-    @media (max-width: 400px) {
+    @media (max-width: 384px) {
       .progress-path {
-        height: 100vh;
         .wrapper {
           background-position: bottom;
         }
         .progress-path-child-wrapper {
           .progress-path-child-content {
-            plh-task-card {
-              .circle-card-wrapper .image-and-badge-wrapper .circle-wrapper {
-                height: 75px !important;
-                width: 75px !important;
-                &.inProgress {
-                  width: 78px !important;
-                  height: 78px !important;
-                }
-              }
-            }
             &:nth-child(1) {
-              bottom: 4%;
+              bottom: 1%;
               left: 40%;
             }
             &:nth-child(2) {
               bottom: 10%;
-              right: 3.6%;
+              right: 3%;
             }
             &:nth-child(3) {
-              bottom: 32%;
-              right: 10%;
+              bottom: 29%;
+              right: 13%;
             }
             &:nth-child(4) {
-              bottom: 29%;
-              left: 18%;
+              bottom: 28%;
+              left: 20%;
             }
             &:nth-child(5) {
-              top: 33%;
-              left: 12%;
+              top: 34%;
+              left: 4%;
             }
             &:nth-child(6) {
-              top: 36%;
+              top: 32%;
               right: 10%;
             }
             &:nth-child(7) {
-              top: 15%;
-              right: 2%;
+              top: 14%;
+              right: 1%;
             }
             &:nth-child(8) {
               top: 13%;
               right: 40%;
             }
             &:nth-child(9) {
-              top: 6%;
-              left: 6%;
+              top: 2%;
+              left: 10%;
             }
           }
         }
